# happylog

./: .editorconfig  Cargo.toml  LICENSE.md  README.md
examples/: basic-log.rs  basic-progress.rs
src/: args.rs  clap.rs  console_emitter.rs  format.rs  lib.rs  progress.rs  structopt.rs  target.rs  util.rs  verbosity.rs
