[package]
name = "happylog"
version = "0.3.0-b1"
authors = ["Michael Ekstrand <michaelekstrand@boisestate.edu>"]
homepage = "https://github.com/mdekstrand/happylog"
repository = "https://github.com/mdekstrand/happylog.git"
keywords = ["logging", "console"]
categories = ["command-line-interface"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Simple logging backend for command-line utilities"

[features]
default = ["colored"]
colored = ["fern/colored"]

[dependencies]
log = "^0.4.8"
indicatif = "^0.17.0"
fern = "^0.6.1"

structopt = { version = ">= 0.2", optional = true }
clap = { version = "^4.0", optional = true, features=["derive"] }

[[example]]
name = "basic-progress"
required-features = ["structopt"]
